# CyberiadaHSM-Editor

./: CMakeLists.txt  README.md  cyberiada.pro  cyberiada_abstract_item.cpp  cyberiada_abstract_item.h  cyberiada_constants.h  cyberiada_root_item.cpp  cyberiada_state_item.cpp  cyberiada_state_item.h  cyberiada_trans_item.cpp  cyberiada_trans_item.h  cyberiada_visible_item.h  cyberiadasm_editor_choice_item.cpp  cyberiadasm_editor_choice_item.h  cyberiadasm_editor_comment_item.cpp  cyberiadasm_editor_comment_item.h  cyberiadasm_editor_items.cpp  cyberiadasm_editor_items.h  cyberiadasm_editor_scene.cpp  cyberiadasm_editor_scene.h  cyberiadasm_editor_sm_item.cpp  cyberiadasm_editor_sm_item.h  cyberiadasm_editor_state_item.cpp  cyberiadasm_editor_state_item.h  cyberiadasm_editor_transition_item.cpp  cyberiadasm_editor_transition_item.h  cyberiadasm_editor_vertex_item.cpp  cyberiadasm_editor_vertex_item.h  cyberiadasm_editor_view.cpp  cyberiadasm_editor_view.h  cyberiadasm_item.cpp  cyberiadasm_item.h  cyberiadasm_model.cpp  cyberiadasm_model.h  cyberiadasm_prop_view.cpp  cyberiadasm_properties_widget.cpp  cyberiadasm_properties_widget.h  cyberiadasm_tree_proxy_model.cpp  cyberiadasm_tree_proxy_model.h  cyberiadasm_view.cpp  (+21 more)
dialogs/: export_file_dialog.cpp  export_file_dialog.h  export_file_dialog.ui  open_file_dialog.cpp  open_file_dialog.h  open_file_dialog.ui  preferences_dialog.cpp  preferences_dialog.h  preferences_dialog.ui  properties_dialog.cpp  properties_dialog.h  stateactiondialog.cpp  stateactiondialog.h
old/: cyberiada_abstract_item.cpp  cyberiada_abstract_item.h  cyberiada_root_item.cpp  cyberiada_root_item.h  cyberiada_state_item.h  cyberiada_visible_item.cpp  cyberiada_visible_item.h  cyberiadasm_prop_proxy_model.cpp  cyberiadasm_prop_proxy_model.h  cyberiadasm_prop_view.h
test/LodyginAnton/: main.cpp  scene.cpp  scene.h  test_prog.pro  toolbar.cpp  toolbar.h  view.cpp  view.h
test/ViktorovaAnastasia/: dotsignal.cpp  dotsignal.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  src.pro  svgreader.h  transition.cpp  vepolyline.h  vepolylinesettings.cpp  vepolylinesettings.h  verectangle.cpp  verectangle.h  verectanglesettings.cpp  verectanglesettings.h  verectanglesettings.ui  veselectionrect.cpp  veselectionrect.h  veworkplace.cpp  veworkplaceview.cpp  veworkplaceview.h
test/prototype_2/: colorlabel.cpp  colorlabel.h  svgreader.cpp  transition.h  vepolyline.cpp  vepolylinesettings.ui  veworkplace.h
